--- a/index.html
+++ b/index.html
@@ -15,30 +15,28 @@
 </head>
 <body>
     <!--Navbar Section-->
-  <nav class="navbar">
-    <div class="navbar_container">
-        <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
-        <div class="navbar__toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-         
-        </div>
-        <ul class="navbar__menu">
-          <Li class="navbar__item">
-            <a href="" id="navbar__links">Home</a>
-          </Li>
-          <Li class="navbar__item">
-            <a href="/tech.html" id="navbar__links">Education</a>
-          </Li>
-          <Li class="navbar__item">
-            <a href="/" id="navbar__links">Projects</a>
-          </Li>
-          <Li class="navbar__btn"><a href="/"
-            class="button">sign up</a></Li>
-        </ul>  
-    </div> 
-  </nav>
+ <nav class="navbar">
+  <div class="navbar__container">
+    <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
+    <div class="navbar__toggle" id="mobile-menu">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <ul class="navbar__menu">
+      <li class="navbar__item">
+        <a href="" class="navbar__links">Home</a>
+      </li>
+      <li class="navbar__item">
+        <a href="/tech.html" class="navbar__links">Education</a>
+      </li>
+      <li class="navbar__item">
+        <a href="/" class="navbar__links">Projects</a>
+      </li>
+      <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
+    </ul>
+  </div>
+</nav>
 
   <!--Hero Section-->
   <div class="main">
