--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 </nav>
 
   <!--Hero Section-->
-  <div class="main">
+ <div class="main">
     <div class="main__container">
         <div class="main__content">
-            <h1></h1>
-            <h2></h2>
-            <p>Welcome to my web profolio</p>
-            <button class="main__btn"><a href="/">Get started</a></button>
+            <h1>Great Experience</h1>
+            <h2>Work Work</h2>
+            <p>Welcome to my web portfolio</p>
+            <a href="/" class="main__btn">Get started</a>
         </div>
         <div class="main__img--container">
-            <img src="pic.svg"
-            alt="pic" id="main__img" />
+            <img src="pic.svg" alt="A descriptive image related to the portfolio" id="main__img" />
         </div>
     </div>
+</div>
 
     <!-- services section-->
     <div class="services">
