--- a/index.html
+++ b/index.html
@@ -5,110 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farai's Website</title>
     <link rel="stylesheet" href="styless.css" />
-    <link
-      rel="stylesheet"
-      href="https://kit.fontawesome.com/771e08f4bb.js"
-    crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/771e08f4bb.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Navbar Section-->
- <nav class="navbar">
-  <div class="navbar__container">
-    <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
-    <div class="navbar__toggle" id="mobile-menu">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-    <ul class="navbar__menu">
-      <li class="navbar__item">
-        <a href="" class="navbar__links">Home</a>
-      </li>
-      <li class="navbar__item">
-        <a href="/tech.html" class="navbar__links">Education</a>
-      </li>
-      <li class="navbar__item">
-        <a href="/" class="navbar__links">Projects</a>
-      </li>
-      <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
-    </ul>
-  </div>
-</nav>
-
-  <!--Hero Section-->
- <div class="main">
-    <div class="main__container">
-        <div class="main__content">
-            <h1>Great Experience</h1>
-            <h2>Work Work</h2>
-            <p>Welcome to my web portfolio</p>
-            <a href="/" class="main__btn">Get started</a>
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="" class="navbar__links">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/tech.html" class="navbar__links">Education</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links">Projects</a>
+                </li>
+                <li class="navbar__btn"><a href="/signup.html" class="button">Sign Up</a></li>
+            </ul>
         </div>
-        <div class="main__img--container">
-            <img src="pic.svg" alt="A descriptive image related to the portfolio" id="main__img" />
+    </nav>
+
+    <!--Hero Section-->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Great Experience</h1>
+                <h2>Work Work</h2>
+                <p>Welcome to my web portfolio</p>
+                <a href="/" class="main__btn">Get started</a>
+            </div>
+            <div class="main__img--container">
+                <img src="pic.svg" alt="A descriptive image related to the portfolio" id="main__img" />
+            </div>
         </div>
     </div>
-</div>
 
-    <!-- services section-->
+    <!-- Services Section-->
     <div class="services">
         <h1>Look at my profile</h1>
         <div class="services__container">
             <div class="services__card">
                 <h2>Welcome</h2>
                 <p>My webpage</p>
-                <button>Get started</button>
+                <button><a href="/signup.html">Get started</a></button>
             </div>
             <div class="services__card">
                 <h2>Are you ready?</h2>
                 <p>Take the leap</p>
-                <button>Get started</button>
+                <button><a href="/signup.html">Get started</a></button>
             </div>
         </div>
     </div>
 
     <!-- Footer Section-->
-     <div class="footer__container">
+    <div class="footer__container">
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2> About Me</h2>
-                    <a href="/">contact information</a>
+                    <h2>About Me</h2>
+                    <a href="/">Contact Information</a>
                     <a href="/">Education</a>
                 </div>
                 <div class="footer__link--items">
-                    <h2> social Media</h2>
+                    <h2>Social Media</h2>
                     <a href="/">Instagram</a>
-                    <a href="/">facebook</a>
-                    <a href="/">linkedin"></a>
+                    <a href="/">Facebook</a>
+                    <a href="/">LinkedIn</a>
                 </div>
             </div>
         </div>
-     </div>
-     <div class="social__media">
+    </div>
+
+    <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="/" id="footer__logo"><i class="fas
-                faa-gem"></i> Farai</a>
+                <a href="/" id="footer__logo"><i class="fas fa-gem"></i> Farai</a>
             </div>
             <div class="social__icons">
-                <a href="/" class="social__icon--link"
-                target="_blank">
-                  <i class="fab fa-instagram"></i>
+                <a href="/" class="social__icon--link" target="_blank">
+                    <i class="fab fa-instagram"></i>
                 </a>
-               <a href="/" class="social__icon--link"
-                target="_blank">
-                  <i class="fab fa-facebook"></i>
+                <a href="/" class="social__icon--link" target="_blank">
+                    <i class="fab fa-facebook"></i>
                 </a>
-                <a href="/" class="social__icon--link"
-                target="_blank">
-                  <i class="fab fa-linkedin"></i>
+                <a href="/" class="social__icon--link" target="_blank">
+                    <i class="fab fa-linkedin"></i>
                 </a>
+            </div>
         </div>
-     </div>
-  <script src="app.js"></script>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
