--- a/tech.html
+++ b/tech.html
@@ -5,57 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farai's Website</title>
     <link rel="stylesheet" href="styless.css" />
-    <link
-      rel="stylesheet"
-      href="https://kit.fontawesome.com/771e08f4bb.js"
-    crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/771e08f4bb.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Navbar Section-->
-  <nav class="navbar">
-    <div class="navbar_container">
-        <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
-        <div class="navbar__toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-         
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="" id="navbar__links">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/tech.html" id="navbar__links">Education</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/" id="navbar__links">Projects</a>
+                </li>
+                <li class="navbar__btn"><a href="/" class="button">Sign up</a></li>
+            </ul>
         </div>
-        <ul class="navbar__menu">
-          <Li class="navbar__item">
-            <a href="" id="navbar__links">Home</a>
-          </Li>
-          <Li class="navbar__item">
-            <a href="/tech.html" id="navbar__links">Education</a>
-          </Li>
-          <Li class="navbar__item">
-            <a href="/" id="navbar__links">Projects</a>
-          </Li>
-          <Li class="navbar__btn"><a href="/"
-            class="button">sign up</a></Li>
-        </ul>  
-    </div> 
-  </nav>
+    </nav>
 
-  <!--Hero Section-->
-  <div class="main">
-    <div class="main__container">
-        <div class="main__content">
-            <h1>My 2nd page</h1>
-            <h2>skills</h2>
-            <p>Welcome to my web profolio</p>
-            <button class="main__btn"><a href="/">Get started</a></button>
-        </div>
-        <div class="main__img--container">
-            <img src="pic2.jpg"
-            alt="pic" id="main__img"/>
+    <!--Hero Section-->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>My 2nd page</h1>
+                <h2>Skills</h2>
+                <p>Welcome to my web portfolio</p>
+                <button class="main__btn"><a href="/">Get started</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="pic2.jpg" alt="pic" id="main__img"/>
+            </div>
         </div>
     </div>
 
-    <!-- services section-->
+    <!-- Services Section-->
     <div class="services">
         <h1>Look at my profile</h1>
         <div class="services__container">
@@ -73,44 +68,44 @@
     </div>
 
     <!-- Footer Section-->
-     <div class="footer__container">
+    <div class="footer__container">
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2> About Me</h2>
-                    <a href="/">contact information</a>
+                    <h2>About Me</h2>
+                    <a href="/">Contact information</a>
                     <a href="/">Education</a>
                 </div>
                 <div class="footer__link--items">
-                    <h2> social Media</h2>
+                    <h2>Social Media</h2>
                     <a href="/">Instagram</a>
-                    <a href="/">facebook</a>
-                    <a href="/">linkedin"></a>
+                    <a href="/">Facebook</a>
+                    <a href="/">LinkedIn</a>
                 </div>
             </div>
         </div>
-     </div>
-     <div class="social__media">
+    </div>
+
+    <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="/" id="footer__logo"><i class="fas
-                faa-gem"></i> Farai</a>
+                <a href="/" id="footer__logo"><i class="fas fa-gem"></i> Farai</a>
             </div>
             <div class="social__icons">
-                <a href="/" class="social__icon--link"
-                target="_blank">
-                  <i class="fab fa-instagram"></i>
+                <a href="/" class="social__icon--link" target="_blank">
+                    <i class="fab fa-instagram"></i>
                 </a>
-               <a href="/" class="social__icon--link"
-                target="_blank">
-                  <i class="fab fa-facebook"></i>
+                <a href="/" class="social__icon--link" target="_blank">
+                    <i class="fab fa-facebook"></i>
                 </a>
-                <a href="/" class="social__icon--link"
-                target="_blank">
-                  <i class="fab fa-linkedin"></i>
+                <a href="/" class="social__icon--link" target="_blank">
+                    <i class="fab fa-linkedin"></i>
                 </a>
+            </div>
         </div>
-     </div>
-  <script src="app.js"></script>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
+
