--- a/tech.html
+++ b/tech.html
@@ -28,7 +28,7 @@
                     <a href="/tech.html" id="navbar__links">Education</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" id="navbar__links">Projects</a>
+                    <a href="/index.html" id="navbar__links">Projects</a>
                 </li>
                 <li class="navbar__btn"><a href="/" class="button">Sign up</a></li>
             </ul>
@@ -78,9 +78,9 @@
                 </div>
                 <div class="footer__link--items">
                     <h2>Social Media</h2>
-                    <a href="/">Instagram</a>
-                    <a href="/">Facebook</a>
-                    <a href="/">LinkedIn</a>
+                    <a href="www.instagram.com">Instagram</a>
+                    <a href="www.facebook.com">Facebook</a>
+                    <a href="www.LinkedIn.com">LinkedIn</a>
                 </div>
             </div>
         </div>
