--- a/index.html
+++ b/index.html
@@ -78,28 +78,30 @@
                 </div>
                 <div class="footer__link--items">
                     <h2>Social Media</h2>
-                    <a href="/">Instagram</a>
-                    <a href="/">Facebook</a>
-                    <a href="/">LinkedIn</a>
-                </div>
-            </div>
+                    <div class="footer__link--items">
+                        <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">Instagram</a>
+                        <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">Facebook</a>
+                        <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">LinkedIn</a>
+                    </div>
+                    <div class="social__media">
+                        <div class="social__media--wrap">
+                            <div class="footer__logo">
+                                <a href="/" id="footer__logo"><i class="fas fa-gem"></i> Farai</a>
+                            </div>
+                            <div class="social__icons">
+                                <a href="https://www.instagram.com/" class="social__icon--link" target="_blank" aria-label="Instagram">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="https://www.facebook.com/" class="social__icon--link" target="_blank" aria-label="Facebook">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/" class="social__icon--link" target="_blank" aria-label="LinkedIn">
+                                    <i class="fab fa-linkedin"></i>
+            </a>
         </div>
     </div>
+</div>
 
-    <div class="social__media">
-        <div class="social__media--wrap">
-            <div class="footer__logo">
-                <a href="/" id="footer__logo"><i class="fas fa-gem"></i> Farai</a>
-            </div>
-            <div class="social__icons">
-                <a href="/" class="social__icon--link" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="/" class="social__icon--link" target="_blank">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="/" class="social__icon--link" target="_blank">
-                    <i class="fab fa-linkedin"></i>
                 </a>
             </div>
         </div>
