--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>About Me</h2>
-                    <a href="/">Contact Information</a>
-                    <a href="/">Education</a>
+                    <a href="/">Contact Me</a>
+            
                 </div>
                 <div class="footer__link--items">
                     <h2>Social Media</h2>
@@ -101,26 +101,6 @@
         </div>
     </div>
 </div>
-
-                </a>
-            </div>
-        </div>
-    </div>
-
-        <div class="contact-form">
-        <h2>Contact Me</h2>
-        <form action="/action_page.php" target="_blank">
-            <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name" aria-label="Name"></p>
-            <p><input class="w3-input w3-padding-16" type="email" placeholder="Email" required name="Email" aria-label="Email"></p>
-            <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject" aria-label="Subject"></p>
-            <p><textarea class="w3-input w3-padding-16" placeholder="Message" required name="Message" aria-label="Message"></textarea></p>
-            <p>
-                <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-                    <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                </button>
-            </p>
-        </form>
-    </div>
 
     <script src="app.js"></script>
 </body>
