--- a/tech.html
+++ b/tech.html
@@ -22,15 +22,11 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="" id="navbar__links">Home</a>
+                    <a href="/index.html" id="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/tech.html" id="navbar__links">Education</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="/index.html" id="navbar__links">Projects</a>
-                </li>
-                <li class="navbar__btn"><a href="/" class="button">Sign up</a></li>
             </ul>
         </div>
     </nav>
