--- a/tech.html
+++ b/tech.html
@@ -22,10 +22,10 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/index.html" id="navbar__links">Home</a>
+                    <a href="/index.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/tech.html" id="navbar__links">Education</a>
+                    <a href="/tech.html" class="navbar__links">Education</a>
                 </li>
             </ul>
         </div>
