--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>Great Experience</h1>
-                <h2>Work Work</h2>
-                <p>Welcome to my web portfolio</p>
-                <a href="/" class="main__btn">Get started</a>
+                <h1>Computer Scientist</h1>
+                <h2>Chemist</h2>
+                <p>Welcome to my web page</p>
+                <a href="/" class="main__btn">Download my CV</a>
             </div>
             <div class="main__img--container">
                 <img src="pic.svg" alt="A descriptive image related to the portfolio" id="main__img" />
@@ -47,21 +47,7 @@
     </div>
 
     <!-- Services Section-->
-    <div class="services">
-        <h1>Look at my profile</h1>
-        <div class="services__container">
-            <div class="services__card">
-                <h2>Welcome</h2>
-                <p>My webpage</p>
-                <button><a href="/signup.html">Get started</a></button>
-            </div>
-            <div class="services__card">
-                <h2>Are you ready?</h2>
-                <p>Take the leap</p>
-                <button><a href="/signup.html">Get started</a></button>
-            </div>
-        </div>
-    </div>
+
 
     <!-- Footer Section-->
     <div class="footer__container">
