--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1>Computer Scientist</h1>
                 <h2>Chemist</h2>
                 <p>Welcome to my web page</p>
-                <a href="/" class="main__btn">Download my CV</a>
+                <a href="Resume.docx" class="main__btn">Download my CV</a>
             </div>
             <div class="main__img--container">
                 <img src="pic.svg" alt="A descriptive image related to the portfolio" id="main__img" />
