--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Navbar Section-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai</a>
+            <a href="" id="navbar__logo"><i class="fas fa-gem"></i> Farai Chadzimura</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
