--- a/tech.html
+++ b/tech.html
@@ -37,7 +37,7 @@
             <div class="main__content">
                 <h1>My 2nd page</h1>
                 <h2>Skills</h2>
-                <p>Welcome to my web portfolio</p>
+                <p>Welcome to my webpage</p>
                 <button class="main__btn"><a href="/">Get started</a></button>
             </div>
         </div>
