--- a/tech.html
+++ b/tech.html
@@ -35,10 +35,10 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>My 2nd page</h1>
+                <h1>Welcome to my page</h1>
                 <h2>Skills</h2>
                 <p>Welcome to my webpage</p>
-                <button class="main__btn"><a href="/">Get started</a></button>
+                <button class="main__btn"><a href="Resume.docx">Download CV</a></button>
             </div>
         </div>
     </div>
