--- a/tech.html
+++ b/tech.html
@@ -33,14 +33,27 @@
 
     <!--Hero Section-->
     <div class="main">
-        <div class="main__container">
-            <div class="main__content">
-                <h1>Welcome to my page</h1>
-                <h2>Skills</h2>
-                <p>Welcome to my webpage</p>
-                <button class="main__btn"><a href="Resume.docx">Download CV</a></button>
-            </div>
+    <div class="main__container">
+        <div class="main__content">
+            <h1>Welcome to my page</h1>
+            <h2>Skills</h2>
+            <p>Welcome to my webpage</p>
+            
+            <!-- List of Skills -->
+            <ul class="skills-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>Cloud computing</li>
+                <li>Artificial Management</li>
+            </ul>
+
+            <button class="main__btn"><a href="Resume.docx" download>Get started</a></button>
         </div>
+    </div>
+</div>
+
     </div>
     <!-- Footer Section-->
     <div class="footer__container">
