--- a/tech.html
+++ b/tech.html
@@ -35,7 +35,7 @@
     <div class="main">
     <div class="main__container">
         <div class="main__content">
-            <h1>Welcome to my page</h1>
+            <h1>Welcome!</h1>
             <h2>Skills</h2>
             <p>Welcome to my webpage</p>
             
