--- a/tech.html
+++ b/tech.html
@@ -36,6 +36,10 @@
     <div class="main__container">
         <div class="main__content">
             <h1>Welcome!</h1>
+            <p> Dave found joy in the daily routine of life. 
+                He awoke at the same time, ate the same breakfast and drove the same commute. 
+                He worked at a job that never seemed to change and he got home at 6 pm sharp every night. 
+                It was who he had been for the last ten years and he had no idea that was all about to change</p>
             <h2>Skills</h2>
             
             <!-- List of Skills -->
@@ -44,8 +48,8 @@
                 <li>CSS</li>
                 <li>JavaScript</li>
                 <li>Python</li>
-                <li>Cloud computing</li>
-                <li>Artificial Management</li>
+                <li>Cloud Computing</li>
+                <li>Artificial Intelligence</li>
             </ul>
 
             <button class="main__btn"><a href="Resume.docx" download>Get started</a></button>
