--- a/tech.html
+++ b/tech.html
@@ -52,7 +52,7 @@
                 <li>Artificial Intelligence</li>
             </ul>
 
-            <button class="main__btn"><a href="Resume.docx" download>Get started</a></button>
+            <button class="main__btn"><a href="Resume.docx" download>Download CV</a></button>
         </div>
     </div>
 </div>
