--- a/index.html
+++ b/index.html
@@ -45,16 +45,13 @@
         </div>
     </div>
 
-    <!-- Services Section-->
-
-
     <!-- Footer Section-->
     <div class="footer__container">
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2>About Me</h2>
-                   
+                    <h2>Information</h2>
+                   <br>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1X2DWZFCIeD1YMO6xEmygDppwz6mwtv6I2Adsap-X6fGpPA/viewform?usp=dialog/">Contact Me</a>
             
                 </div>
