--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2>Information</h2>
+                    <h2><span>Information</span></h2>
                    <br>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1X2DWZFCIeD1YMO6xEmygDppwz6mwtv6I2Adsap-X6fGpPA/viewform?usp=dialog/">Contact Me</a>
             
                 </div>
                 <div class="footer__link--items">
-                    <h2>Social Media</h2>
+                    <h2><span></span>Social Media</span</h2>
                     <div class="footer__link--items">
                         <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">Instagram</a>
                         <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">Facebook</a>
@@ -76,10 +76,11 @@
                                 </a>
                                 <a href="https://www.linkedin.com/" class="social__icon--link" target="_blank" aria-label="LinkedIn">
                                     <i class="fab fa-linkedin"></i>
-            </a>
-        </div>
-    </div>
-</div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                
 
     <script src="app.js"></script>
 </body>
