--- a/tech.html
+++ b/tech.html
@@ -60,40 +60,42 @@
     </div>
     <!-- Footer Section-->
     <div class="footer__container">
-        <div class="footer__links">
-            <div class="footer__link--wrapper">
+    <div class="footer__links">
+        <div class="footer__link--wrapper">
+            <div class="footer__link--items">
+                <h2><span>Information</span></h2>
+                <br>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1X2DWZFCIeD1YMO6xEmygDppwz6mwtv6I2Adsap-X6fGpPA/viewform?usp=dialog/">Contact Me</a>
+            </div>
+            <div class="footer__link--items">
+                <h2><span>Social Media</span></h2>
                 <div class="footer__link--items">
-                    <h2>About Me</h2>
-                    
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1X2DWZFCIeD1YMO6xEmygDppwz6mwtv6I2Adsap-X6fGpPA/viewform?usp=dialog/">Contact Me</a>
+                    <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">Instagram</a>
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">Facebook</a>
+                    <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">LinkedIn</a>
                 </div>
-                <div class="footer__link--items">
-                    <h2>Social Media</h2>
-<div class="footer__link--items">
-    <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">Instagram</a>
-    <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">Facebook</a>
-    <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">LinkedIn</a>
-</div>
-
-<div class="social__media">
-    <div class="social__media--wrap">
-        <div class="footer__logo">
-            <a href="/" id="footer__logo"><i class="fas fa-gem"></i> Farai</a>
-        </div>
-        <div class="social__icons">
-            <a href="https://www.instagram.com/" class="social__icon--link" target="_blank" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/" class="social__icon--link" target="_blank" aria-label="Facebook">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.linkedin.com/" class="social__icon--link" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin"></i>
-            </a>
+                <div class="social__media">
+                    <div class="social__media--wrap">
+                        <div class="footer__logo">
+                            <a href="/" id="footer__logo"><i class="fas fa-gem"></i> Farai</a>
+                        </div>
+                        <div class="social__icons">
+                            <a href="https://www.instagram.com/" class="social__icon--link" target="_blank" aria-label="Instagram">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="https://www.facebook.com/" class="social__icon--link" target="_blank" aria-label="Facebook">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/" class="social__icon--link" target="_blank" aria-label="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
             
 
     <script src="app.js"></script>
