--- a/tech.html
+++ b/tech.html
@@ -25,7 +25,7 @@
                     <a href="/index.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links">Education</a>
+                    <a href="/tech.html" class="navbar__links">About Me</a>
                 </li>
             </ul>
         </div>
