--- a/tech.html
+++ b/tech.html
@@ -36,10 +36,12 @@
     <div class="main__container">
         <div class="main__content">
             <h1>Welcome!</h1>
-            <p> Dave found joy in the daily routine of life. 
-                He awoke at the same time, ate the same breakfast and drove the same commute. 
-                He worked at a job that never seemed to change and he got home at 6 pm sharp every night. 
-                It was who he had been for the last ten years and he had no idea that was all about to change</p>
+            <p> Hi my name is Farai Chadzimura. 
+                I am an aspiring computer scientist in London with a chemistry degree. 
+                This is my web portfolio that I created to showcase my software development ability. 
+                You can download my CV to learn more about me, my education history and experience.
+                Please do not hesitate to contact me!
+            </p>
             <h2>Skills</h2>
             
             <!-- List of Skills -->
