--- a/tech.html
+++ b/tech.html
@@ -33,7 +33,7 @@
 
     <!--Hero Section-->
     <div class="main">
-    <div class="main__container">
+    <div class="main__container" id="centered-page">
         <div class="main__content">
             <h1>Welcome!</h1>
             <p> Hi my name is Farai Chadzimura. 
